--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/rss": "^4.0.12",
     "@astrojs/sitemap": "^3.6.0",
     "astro": "^5.14.1",
+    "pdfjs-dist": "^5.4.296",
     "sharp": "^0.34.3"
   }
 }
