--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^4.3.6",
     "@astrojs/react": "^4.4.0",
     "@astrojs/rss": "^4.0.12",
     "@astrojs/sitemap": "^3.6.0",
@@ -17,5 +16,8 @@
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "astro": "^5.14.1",
     "sharp": "^0.34.3"
+  },
+  "devDependencies": {
+    "@astrojs/mdx": "^4.3.6"
   }
 }
